--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "connect-mongo": "^4.6.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-react-views": "^0.11.0",
+    "express-session": "^1.17.2",
     "method-override": "^3.0.0",
     "mongoose": "^6.2.4",
     "morgan": "^1.10.0",
