--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "project_2",
   "version": "1.0.0",
+  "engines": {
+    "node": "16.13.1"
+  },
   "description": "",
   "main": "server.js",
   "scripts": {
