--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "project_2",
   "version": "1.0.0",
   "engines": {
-    "node": "16.13.1"
+    "node": "16.13.1",
+    "npm": "8.1.2"
   },
   "description": "",
   "main": "server.js",
